# Rfx

./: .gitignore  Makefile  README.md  Rfx.cabal  rfx.org  ru.po
gui/: c.lang  rfx.lang  rfx_gui.hs
include/: rfx.h
src/: rfx.hs
src/Language/Rfx/: Compiler.hs  Error.hs  Lexer.hs  Parser.hs  Structures.hs  Tokens.hs  Util.hs  Validator.hs
src/Language/Rfx/Compiler/: C.hs  Common.hs
test/: rfx_test.hs  simple.rfx  vars.rfx
test/fail/: expr.rfx  next.rfx  nums.rfx  vars.rfx
test/succ/: calc.rfx  cs.rfx  expr.rfx  fun.rfx  if.rfx  next.rfx  nums.rfx  simple.rfx  vars.rfx  wait.rfx  while.rfx
