name: Rfx
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: GPL
license-file: ""
copyright:
maintainer:
build-depends: base >=3, containers >=0.2, mtl >=1.1, parsec >=3,
               utf8-string >=0.3
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
             .
             .
category:
author: Karavaev Egor
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Language.Rfx.Validator Language.Rfx.Util
                 Language.Rfx.Tokens Language.Rfx.Structures Language.Rfx.Parser
                 Language.Rfx.Lexer Language.Rfx.Error Language.Rfx.Compiler
                 Language.Rfx.Compiler.Common Language.Rfx.Compiler.C
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -W
hugs-options:
nhc98-options:
jhc-options:
 
executable: rfx
main-is: rfx.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -W
hugs-options:
nhc98-options:
jhc-options: